--- a/titconn/deployment.yaml
+++ b/titconn/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: images.teknobulut.net/titconn/titconn-hub:2026.1.5.11
+        image: images.teknobulut.net/titconn/titconn-hub:2026.1.5.12
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -82,10 +82,17 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: images.teknobulut.net/titconn/titconn-api:2026.1.5.11
+        image: images.teknobulut.net/titconn/titconn-api:2026.1.5.12
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
+        resources:
+          requests:
+            memory: "512Mi"   # Uygulamanın başlaması için gereken minimum RAM
+            cpu: "250m"
+          limits:
+            memory: "2Gi"    # Uygulamanın asla geçmemesi gereken sınır
+            cpu: "1000m"
       imagePullSecrets:
       - name: harborsecret
 ---
@@ -149,7 +156,7 @@ spec:
     spec:
       containers:
       - name: titconn-microservice-container
-        image: images.teknobulut.net/titconn/titconn-microservice:2026.1.5.11
+        image: images.teknobulut.net/titconn/titconn-microservice:2026.1.5.12
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -216,7 +223,7 @@ spec:
     spec:
       containers:
       - name: titconn-scheduler-container
-        image: images.teknobulut.net/titconn/titconn-scheduler:2026.1.5.11
+        image: images.teknobulut.net/titconn/titconn-scheduler:2026.1.5.12
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -283,7 +290,7 @@ spec:
     spec:
       containers:
       - name: titconn-grpcservice-container
-        image: images.teknobulut.net/titconn/titconn-grpcservice:2026.1.5.11
+        image: images.teknobulut.net/titconn/titconn-grpcservice:2026.1.5.12
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -350,7 +357,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: images.teknobulut.net/titconn/titconn-app:2026.1.5.11
+        image: images.teknobulut.net/titconn/titconn-app:2026.1.5.12
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
