--- a/titconn/deployment.yaml
+++ b/titconn/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: titconn-hub-container
-        image: images.teknobulut.net/titconn/titconn-hub:2026.1.29.2
+        image: images.teknobulut.net/titconn/titconn-hub:2026.2.19.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -82,7 +82,7 @@ spec:
     spec:
       containers:
       - name: titconn-api-container
-        image: images.teknobulut.net/titconn/titconn-api:2026.1.29.2
+        image: images.teknobulut.net/titconn/titconn-api:2026.2.19.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -149,7 +149,7 @@ spec:
     spec:
       containers:
       - name: titconn-microservice-container
-        image: images.teknobulut.net/titconn/titconn-microservice:2026.1.29.2
+        image: images.teknobulut.net/titconn/titconn-microservice:2026.2.19.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -216,7 +216,7 @@ spec:
     spec:
       containers:
       - name: titconn-scheduler-container
-        image: images.teknobulut.net/titconn/titconn-scheduler:2026.1.29.2
+        image: images.teknobulut.net/titconn/titconn-scheduler:2026.2.19.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -283,7 +283,7 @@ spec:
     spec:
       containers:
       - name: titconn-grpcservice-container
-        image: images.teknobulut.net/titconn/titconn-grpcservice:2026.1.29.2
+        image: images.teknobulut.net/titconn/titconn-grpcservice:2026.2.19.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
@@ -301,8 +301,10 @@ spec:
     app: titconn-grpcservice
   ports:
     - port: 8080
+      name: grpc
       protocol: TCP
       targetPort: 6001
+      appProtocol: grpc
   type: ClusterIP
 ---
 kind: Ingress
@@ -315,7 +317,6 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
     nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
     nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
-    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
 spec:
   ingressClassName: nginx
   tls:
@@ -350,7 +351,7 @@ spec:
     spec:
       containers:
       - name: titconn-app-container
-        image: images.teknobulut.net/titconn/titconn-app:2026.1.29.2
+        image: images.teknobulut.net/titconn/titconn-app:2026.2.19.1
         imagePullPolicy: Always
         env:
             - name: ASPNETCORE_URLS
